--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/views/public/css/index.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <img class="header__logo" src="/views/public/img/fondoIndex.jpg" alt="Logo" />
+      <nav class="header__menu">
+        <a class="header__menu__enlace" href="/views/pages/viewUsuario.html">Usuario</a>
+        <a class="header__menu__enlace" href="/views/pages/viewCredito.html">Creditos</a>
+      </nav>
+    </header>
+    <main></main>
+  </body>
 </html>
