se avanzo en el repo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <a class="header__menu__enlace" href="/views/pages/viewCredito.html">Creditos</a>
       </nav>
     </header>
-    <main></main>
+    <main class="content">
+      <form class="content__form" action="">
+        <button type="button">Conoce nuestras ofertas</button>
+      </form>
+    </main>
+    <script src="/views/public/js/script.js"></script>
   </body>
 </html>
