--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/views/public/css/index.css" />
-    <title>Document</title>
+    <title>Simulador Credito</title>
   </head>
   <body>
     <header class="header">
-      <img class="header__logo" src="/views/public/img/fondoIndex.jpg" alt="Logo" />
+      <img class="header__logo" src="/views/public/img/logo.jpg" alt="Logo" />
       <nav class="header__menu">
         <a class="header__menu__enlace" href="/views/pages/viewUsuario.html">Usuario</a>
         <a class="header__menu__enlace" href="/views/pages/viewCredito.html">Creditos</a>
